--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta id="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>KABK GD Theses 2020 </title>
-  <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="main.css">
-  <script src="../js/jquery-3.4.1.min.js"></script>
-  <script src="script.js"></script>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/main.css">
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/script.js"></script>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
     <div class="container">
       <div class="object object1">
         <div class="side front-side">
-          <img src="../images/object2-Linda-van-Houtum.jpg" alt="Object 1 by Linda van Houtum" />
+          <img src="images/object2-Linda-van-Houtum.jpg" alt="Object 1 by Linda van Houtum" />
           <h3>The Alchemical Recipe for Data Transmutation</h3>
         </div>
         <div class="side back-side">
@@ -71,7 +71,7 @@
 
       <div class="object object2">
         <div class="side front-side">
-          <img src="../images/object1-Maarten-Meij.jpg" alt="Object 2 by Maarten Meij">
+          <img src="images/object1-Maarten-Meij.jpg" alt="Object 2 by Maarten Meij">
           <h3>Kicking Sandcastles and Burning Effigies</h3>
         </div>
         <div class="side back-side">
@@ -108,7 +108,7 @@
 
       <div class="object object3">
         <div class="side front-side">
-          <img src="../images/object3-Nicoletta-Radice.jpg" alt="Object 3 by Nicoletta Radice">
+          <img src="images/object3-Nicoletta-Radice.jpg" alt="Object 3 by Nicoletta Radice">
           <h3>Brainchild of Humanity</h3>
         </div>
         <div class="side back-side">
@@ -145,7 +145,7 @@
 
       <div class="object object3">
         <div class="side front-side">
-          <img src="../images/object21-Clara-Lezla.jpg" alt="Object 21 by Clara Lezla">
+          <img src="images/object21-Clara-Lezla.jpg" alt="Object 21 by Clara Lezla">
           <h3>I comb my hair with a fork</h3>
         </div>
         <div class="side back-side">
