--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta id="viewport" content="width=device-width, initial-scale=1.0">
+  <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>KABK GD Theses 2020 </title>
   <link rel="stylesheet" href="css/reset.css">
