new version test 1

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta id="viewport" name='viewport' content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>KABK GD Theses 2020 </title>
   <link rel="stylesheet" href="css/reset.css">
@@ -228,7 +228,7 @@
           <h2>Rafael Colmanetti</h2>
         </div>
         <div class="person-thesis">
-          <h3>Indigenous actvism in the digital era</h3>
+          <h3>Indigenous activism in the digital era</h3>
         </div>
         <div class="person-thesis-content">
           <div class="person-thesis-image">
@@ -428,7 +428,7 @@
           <h2>Edward Dżułaj</h2>
         </div>
         <div class="person-thesis">
-          <h3>The Phenomenon of Private Press. Printing as a form of resistnace and activism.</h3>
+          <h3>The Phenomenon of Private Press. Printing as a form of resistance and activism.</h3>
         </div>
         <div class="person-thesis-content">
           <div class="person-thesis-image">
@@ -1736,13 +1736,17 @@
       </div>
 
       <div id="theses-info-content">
+        <div id="theses-info-x-button"></div>
         <p>
           We
           present to you a compilation of
           abstracts from each of the 33
           students in the 2020 Bachelor
           Class of Graphic Design at the
-          Royal Academy of Art, The Hague. Feel free to explore further as all the websites are linked here.
+          Royal Academy of Art, The Hague.
+        </p>
+        <p>
+          Feel free to explore further as all the websites are linked here.
           See these works as the result of half
           a year of intensive research and
           writing. Get triggered, excited and
