updated marc's thesis link

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <div class="wrapper">
     <nav class="menu" id="menu">
       <a href="#">
-        <h1 class="title" id="theses-title">KABK Graphic Design Theses 2020 <img src="images/pickle.png"
-            emoji-code="pickle" alt="pickle" /></h1>
+        <h1 class="title" id="theses-title">KABK Graphic Design Theses 2020 <img src="images/pickle.png" emoji-code="pickle" alt="pickle" /></h1>
       </a>
       <a href="#">
         <h1 class="title" id="theses-info">About</h1>
@@ -89,7 +88,7 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/object2-Marc-van-den-Berg.jpg" alt="Image by Marc van den Berg">
-            <div class='website-link'><a href="#" target='blank'></a></div>
+            <div class='website-link'><a href="https://kabk.github.io/GO-theses-20-marc/" target='blank'></a></div>
           </div>
           <div class="person-thesis-text">
             <h3>De deepfake als een nieuwe manifestatie van een nep-identiteit</h3>
@@ -139,8 +138,7 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/placeholder.jpg" alt="Image by Martijn Brakenhoff">
-            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-martijn-brakenhoff/"
-                target='blank'></a>
+            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-martijn-brakenhoff/" target='blank'></a>
             </div>
           </div>
           <div class="person-thesis-text">
@@ -234,8 +232,7 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/object5-Rafael-Colmanetti_.jpg" alt="Image by Rafael Colmanetti">
-            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-rafael-colmanetti/"
-                target='blank'></a>
+            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-rafael-colmanetti/" target='blank'></a>
             </div>
           </div>
           <div class="person-thesis-text">
@@ -631,8 +628,7 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/object13-Linda-Van-Houtum.jpg" alt="Image by Linda van Houtum">
-            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-linda-van-houtum/"
-                target='blank'></a>
+            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-linda-van-houtum/" target='blank'></a>
             </div>
           </div>
           <div class="person-thesis-text">
@@ -735,8 +731,7 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/object15-Berglind-Brá-Jóhannsdóttir.jpg" alt="Image by Berglind Brá Jóhannsdóttir">
-            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-berglind-johannsdottir/"
-                target='blank'></a>
+            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-berglind-johannsdottir/" target='blank'></a>
             </div>
           </div>
           <div class="person-thesis-text">
@@ -865,8 +860,7 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/object17-Nedislav-G-Kamburov.jpg" alt="Image by Nedislav G. Kamburov">
-            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-nedislav-kamburov/"
-                target='blank'></a>
+            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-nedislav-kamburov/" target='blank'></a>
             </div>
           </div>
           <div class="person-thesis-text">
@@ -1221,8 +1215,7 @@
               nature. This prompted leap in technology has changed our relationship
               with nature at its core, introducing new perspectives of
               views. Replacing the stable and single point of view established
-              by the linear through multiple perspectives <sup class='fn'>1</sup> and vertical time <sup
-                class='fn'>2</sup>, as
+              by the linear through multiple perspectives <sup class='fn'>1</sup> and vertical time <sup class='fn'>2</sup>, as
               3D technologies are capable of twisting and manipulating reality,
               pausing time as a refuge of the eternal. With each alternating
               upswing in technology, we meet our perceived static nature
@@ -1359,8 +1352,7 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/object27-Nicolai-Schmelling.jpg" alt="Image by Nicolai Schmelling">
-            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-Nicolai-Schmelling/"
-                target='blank'></a></div>
+            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-Nicolai-Schmelling/" target='blank'></a></div>
           </div>
           <div class="person-thesis-text">
             <h3>HOT MONSTER COMPOST</h3>
@@ -1460,8 +1452,7 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/object29-Anastasiia-Umpeleva.jpg" alt="Image by Anastasiia Umpeleva">
-            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-anastasiia-umpeleva/"
-                target='blank'></a></div>
+            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-anastasiia-umpeleva/" target='blank'></a></div>
           </div>
           <div class="person-thesis-text">
             <h3>The body as a political vehicle in Russia</h3>
@@ -1615,8 +1606,7 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/object32-Mahtab-Zamanifar.jpg" alt="Image by Mahtab Zamanifar">
-            <div class='website-link'><a href="https://kabk.github.io/go-thesis-20-mahtab-zamanifar/"
-                target='blank'></a></div>
+            <div class='website-link'><a href="https://kabk.github.io/go-thesis-20-mahtab-zamanifar/" target='blank'></a></div>
           </div>
           <div class="person-thesis-text">
             <h3>In the world of ghazal, I’m a fleet-flooted galloping gazelle</h3>
