--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <div class="wrapper">
     <nav class="menu" id="menu">
       <a href="#">
-        <h1 class="title" id="theses-title">KABK Graphic Design Theses 2020 <img src="images/pickle.png" emoji-code="pickle" alt="pickle" /></h1>
+        <h1 class="title" id="theses-title">KABK Graphic Design Theses 2020 <img src="images/pickle.png"
+            emoji-code="pickle" alt="pickle" /></h1>
       </a>
       <a href="#">
         <h1 class="title" id="theses-info">About</h1>
@@ -138,7 +139,8 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/placeholder.jpg" alt="Image by Martijn Brakenhoff">
-            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-martijn-brakenhoff/" target='blank'></a>
+            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-martijn-brakenhoff/"
+                target='blank'></a>
             </div>
           </div>
           <div class="person-thesis-text">
@@ -232,7 +234,8 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/object5-Rafael-Colmanetti_.jpg" alt="Image by Rafael Colmanetti">
-            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-rafael-colmanetti/" target='blank'></a>
+            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-rafael-colmanetti/"
+                target='blank'></a>
             </div>
           </div>
           <div class="person-thesis-text">
@@ -628,7 +631,8 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/object13-Linda-Van-Houtum.jpg" alt="Image by Linda van Houtum">
-            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-linda-van-houtum/" target='blank'></a>
+            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-linda-van-houtum/"
+                target='blank'></a>
             </div>
           </div>
           <div class="person-thesis-text">
@@ -731,7 +735,8 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/object15-Berglind-Brá-Jóhannsdóttir.jpg" alt="Image by Berglind Brá Jóhannsdóttir">
-            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-berglind-johannsdottir/" target='blank'></a>
+            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-berglind-johannsdottir/"
+                target='blank'></a>
             </div>
           </div>
           <div class="person-thesis-text">
@@ -860,7 +865,8 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/object17-Nedislav-G-Kamburov.jpg" alt="Image by Nedislav G. Kamburov">
-            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-nedislav-kamburov/" target='blank'></a>
+            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-nedislav-kamburov/"
+                target='blank'></a>
             </div>
           </div>
           <div class="person-thesis-text">
@@ -1215,7 +1221,8 @@
               nature. This prompted leap in technology has changed our relationship
               with nature at its core, introducing new perspectives of
               views. Replacing the stable and single point of view established
-              by the linear through multiple perspectives <sup class='fn'>1</sup> and vertical time <sup class='fn'>2</sup>, as
+              by the linear through multiple perspectives <sup class='fn'>1</sup> and vertical time <sup
+                class='fn'>2</sup>, as
               3D technologies are capable of twisting and manipulating reality,
               pausing time as a refuge of the eternal. With each alternating
               upswing in technology, we meet our perceived static nature
@@ -1352,7 +1359,8 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/object27-Nicolai-Schmelling.jpg" alt="Image by Nicolai Schmelling">
-            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-Nicolai-Schmelling/" target='blank'></a></div>
+            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-Nicolai-Schmelling/"
+                target='blank'></a></div>
           </div>
           <div class="person-thesis-text">
             <h3>HOT MONSTER COMPOST</h3>
@@ -1452,7 +1460,8 @@
           <div class="person-thesis-image">
             <div class="x-button"></div>
             <img src="images/object29-Anastasiia-Umpeleva.jpg" alt="Image by Anastasiia Umpeleva">
-            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-anastasiia-umpeleva/" target='blank'></a></div>
+            <div class='website-link'><a href="https://kabk.github.io/go-theses-20-anastasiia-umpeleva/"
+                target='blank'></a></div>
           </div>
           <div class="person-thesis-text">
             <h3>The body as a political vehicle in Russia</h3>
@@ -1591,87 +1600,6 @@
               in a hybrid and liquid world.
             </p>
 
-          </div>
-        </div>
-      </div>
-
-      <div class="person">
-        <div class="person-name">
-          <h2>Mahtab Zamanifar</h2>
-        </div>
-        <div class="person-thesis">
-          <h3>In the world of ghazal, I’m a fleet-flooted galloping gazelle</h3>
-        </div>
-        <div class="person-thesis-content">
-          <div class="person-thesis-image">
-            <div class="x-button"></div>
-            <img src="images/object32-Mahtab-Zamanifar.jpg" alt="Image by Mahtab Zamanifar">
-            <div class='website-link'><a href="https://kabk.github.io/go-thesis-20-mahtab-zamanifar/" target='blank'></a></div>
-          </div>
-          <div class="person-thesis-text">
-            <h3>In the world of ghazal, I’m a fleet-flooted galloping gazelle</h3>
-
-            <p>My country, a veiled society.
-              <br>
-              My country, do I belong here?</p>
-            <p> My thesis brings together narratives from the perspective of a hybrid identity
-              and being conflicted with or exposed to gender inequality, segregation, racism
-              and violence in Iran and in the Netherlands.<sup class='fn'>1</sup> This hybrid identity constitutes
-              itself across two cultures and two identities. One of them being, an identity
-              searching for the meaning of belonging. <sup class='fn'>2</sup> The other, an identity in a veiled
-              society.<sup class='fn'>3</sup>
-              Highlighting these differences from my background make me understand the connection,
-              of me being an individual woman in-between the two cultures better.
-            </p>
-            <p>I’ve always found it interesting why women have to conceal their bodies, because
-              of claims that “men cannot control their sexuality”. The men have been so powerful
-              throughout history, always dictating the lives of others, of women. Not
-              only in Iran but, in all societies, we have been dealing with dominance by men
-              and overwhelming control by men. With this thesis I saw an opportunity to
-              address this issue by using poetry (paradoxically enough has been an important
-              part of Iranian culture), to create my own ghazals.<sup class='fn'>4</sup> Today, Iranian women are
-              “repressed prisoners” of a patriarchal culture that traditionally prevents the growth
-              of female subjects. This for me was reason enough to write about my own experiences.</p>
-            <p>I will take the reader through a poetic narrative of realities in what I coin “a
-              veiled society”. Within the space of my layout of this thesis I experiment with
-              the footnotes and the legal paragraphs of the Iranian constitution (Sharia), and thus
-              make it more understandable and show how these vague constitutions and
-              laws forcefully suppress Iranian people and their right to speak up. Therefore,
-              through the notion of fiction, I am able to be a voice to the voiceless, to symbolize
-              what has been taken away by the laws of the constitution.</p>
-
-            <ol class="footnotes">
-              <li>
-                Stuart Hall coins the term hybridity
-                in his essay Cultural Identity and
-                Diaspora.
-              </li>
-              <li>Bell Hooks, in her book Belonging:
-                A Culture of Place, talks about the notion
-                of belonging, having a place and of
-                feeling that you are allowed to be yourself
-                there. Her discussion of trauma and
-                the need for psychological healing is also a
-                key driving force behind her discussion of
-                the need to both find a place to belong and
-                a place of community.</li>
-              <li>With which I refer to the Republic
-                of Iran.</li>
-              <li>Ghazal derives from my understanding
-                of a short poem most likely
-                about love, beauty and women (often)
-                written by men.</li>
-              <li>My intent is neither to insult the
-                religion Islam as such, nor any religious
-                subject, nor to make statements against
-                this religion. Instead, my focus lies on
-                the problematic regime in the Islamic
-                Republic of Iran that the Iranian people
-                are facing. It is a personal account,
-                written – from my point of view as an
-                Iranian woman – who has grown up in
-                the Netherlands.</li>
-            </ol>
           </div>
         </div>
       </div>
